--- a/src/components/Tile.css
+++ b/src/components/Tile.css
@@ -208,3 +208,40 @@
   width: var(--size);
   transform: translateY(-50%);
 }
+
+.tooltip {
+  visibility: hidden;
+  width: 120px;
+  background-color: #555;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: .25rem;
+  position: absolute;
+  z-index: 1;
+  bottom: 110%;
+  left: 50%;
+  margin-left: -60px;
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+
+.tooltip::after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: #555 transparent transparent transparent;
+}
+
+.with-tooltip { 
+  position: relative;
+}
+
+.with-tooltip:hover .tooltip {
+  visibility: visible;
+  opacity: 1;
+}
