--- a/src/App.css
+++ b/src/App.css
@@ -12,9 +12,8 @@ body {
 .grid {
   display: grid;
   grid-template-columns: repeat(4, 100px);
-  grid-gap: 10px;
+  grid-gap: .5rem;
 }
-
 
 .game-container {
   display: flex;
@@ -22,7 +21,6 @@ body {
   align-items: center;
   height: 100vh;
 }
-
 
 .app-container {
   display: flex;
