--- a/src/components/GameBoard.css
+++ b/src/components/GameBoard.css
@@ -27,3 +27,10 @@
 .damage-disc:active {
     cursor: grabbing;
 }
+
+.board-title {
+    text-align: center;
+    margin-bottom: 1rem;
+    font-size: 1.5rem;
+    color: #333;
+}
