--- a/src/components/GameBoard.css
+++ b/src/components/GameBoard.css
@@ -11,12 +11,17 @@
   }
   
 .damage-disc {
-    width: 30px;
-    height: 30px;
-    background-color: red;
+    margin-top: 1rem;
+    width: 40px;
+    height: 40px;
+    background-color: #ff4136;
     border-radius: 50%;
-    margin-top: 20px;
-    cursor: grab;
+    cursor: move;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 24px;
+    color: white;
 }
 
 .damage-disc:active {
