--- a/src/components/BoardCell.css
+++ b/src/components/BoardCell.css
@@ -1,7 +1,7 @@
 .cell {
     width: 100px;
     height: 100px;
-    background-color: #999;
+    background-color: rgba(255, 255, 255, 0.5);
     border: 1px solid #ccc;
     display: flex;
     justify-content: center;
