--- a/src/components/GameBoard.css
+++ b/src/components/GameBoard.css
@@ -8,9 +8,13 @@
     display: grid;
     grid-template-columns: repeat(4, 100px);
     grid-gap: .5rem;
-    background-color: #666;
+    background-image: url('~/public/grunge-texture.png');
+    background-blend-mode: difference;
+    background-color: #ccc;
     padding: .5rem;
     border-radius: .5rem;
+    box-shadow: 0 0 10px rgba(0, 0, 0, .2);
+    background-size: cover;
   }
   
 .damage-disc {
@@ -26,6 +30,7 @@
     font-size: 2.5rem;
     color: white;
     border: 2px solid #000;
+    box-shadow: 1px 1px 4px #666;
 }
 
 .damage-disc:active {
