--- a/src/components/Tile.css
+++ b/src/components/Tile.css
@@ -212,7 +212,7 @@
 .tooltip {
   visibility: hidden;
   width: 120px;
-  background-color: #555;
+  background-color: #000;
   color: #fff;
   text-align: center;
   border-radius: 6px;
@@ -234,7 +234,7 @@
   margin-left: -5px;
   border-width: 5px;
   border-style: solid;
-  border-color: #555 transparent transparent transparent;
+  border-color: #000 transparent transparent transparent;
 }
 
 .with-tooltip { 
@@ -244,6 +244,12 @@
 .with-tooltip:hover .tooltip {
   visibility: visible;
   opacity: 1;
+}
+
+.dragged.with-tooltip .tooltip,
+.dragged .with-tooltip .tooltip {
+  visibility: hidden;
+  opacity: 0;
 }
 
 .cell .tile {
