--- a/src/components/BoardCell.css
+++ b/src/components/BoardCell.css
@@ -1,7 +1,7 @@
 .cell {
     width: 100px;
     height: 100px;
-    background-color: #f0f0f0;
+    background-color: #999;
     border: 1px solid #ccc;
     display: flex;
     justify-content: center;
