--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,19 @@ body {
   margin: 0;
 }
 
+h2 {
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  letter-spacing: 1.5px;
+}
+
+h3 {
+  text-align: right;
+  border-bottom: 1px solid #ccc;
+  color: #666;
+  margin-bottom: 2rem;
+  display: block;
+}
+
 * {
   box-sizing: border-box;
 }
