--- a/src/components/GameBoard.css
+++ b/src/components/GameBoard.css
@@ -8,7 +8,7 @@
     display: grid;
     grid-template-columns: repeat(4, 100px);
     grid-gap: .5rem;
-    background-color: #333;
+    background-color: #666;
     padding: .5rem;
     border-radius: .5rem;
   }
@@ -23,8 +23,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 24px;
+    font-size: 2.5rem;
     color: white;
+    border: 2px solid #000;
 }
 
 .damage-disc:active {
