--- a/src/components/PlayerBoard.css
+++ b/src/components/PlayerBoard.css
@@ -7,10 +7,6 @@
   .player-piles.left {
     margin-right: 20px;
   }
-
-  .pile h3 {
-    margin-bottom: .5rem;
-  }
   
   .player-piles.right {
     margin-left: 20px;
@@ -50,13 +46,14 @@
 button {
   padding: 1rem;
   font-size: 1rem;
-  background-color: #4CAF50;
-  color: white;
+  background-color: var(--faction-color, #4CAF50);
   border: none;
   border-radius: 4px;
   cursor: pointer;
+  font-weight: bold;
 }
 
 button:hover {
-  background-color: #45a049;
+  background-color: black;
+  color: white;
 }
