--- a/src/components/Tile.css
+++ b/src/components/Tile.css
@@ -8,7 +8,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: stretch;
     text-align: center;
   }
 
@@ -29,27 +29,6 @@
     background-color: #e2ebff;
   }
   
-  .unit-info {
-    font-weight: bold;
-  }
-  
-  .unit-attacks {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
-    width: 100%;
-    height: 100%;
-  }
-  
-  .edge-attack {
-    font-size: 0.8em;
-  }
-  
-  .edge-attack.↑ { grid-area: 1 / 2 / 2 / 3; }
-  .edge-attack.→ { grid-area: 2 / 3 / 3 / 4; }
-  .edge-attack.↓ { grid-area: 3 / 2 / 4 / 3; }
-  .edge-attack.← { grid-area: 2 / 1 / 3 / 2; }
-  
   .module-content, .action-content {
     font-size: 0.9em;
   }
@@ -58,3 +37,49 @@
     color: rgba(0, 0, 0, 0.5);
     font-size: 0.8em;
   }
+
+  .tile-top {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
+
+  .tile-top-left, .tile-top-right {
+    padding: 3px;
+  }
+
+  .tile-top-center {
+    flex: 1;
+  }
+
+  .tile-top-center, .tile-bottom {
+    height: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    font-size: 0.8em;
+  }
+
+  .tile-left, .tile-right {
+    width: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    font-size: 0.8em;
+  }
+
+  .tile-middle {
+    flex: 1;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.tile-center {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
