--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 .App {
   display: flex;
   justify-content: center;
@@ -47,12 +51,6 @@
   grid-gap: 10px;
 }
 
-.cell {
-  width: 100px;
-  height: 100px;
-  background-color: #f0f0f0;
-  border: 1px solid #ccc;
-}
 
 .game-container {
   display: flex;
