--- a/src/components/PlayerComponent.css
+++ b/src/components/PlayerComponent.css
@@ -7,14 +7,15 @@
   .player-piles.left {
     margin-right: 20px;
   }
+
+  .pile h3 {
+    margin-bottom: .5rem;
+  }
   
   .player-piles.right {
     margin-left: 20px;
   }
   
-  .pile {
-    margin-bottom: 30px;
-  }
   
   .pile-content {
     position: relative;
