--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,8 @@ body {
 h2 {
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
   letter-spacing: 1.5px;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 h2 .dim {
@@ -14,10 +16,9 @@ h2 .dim {
 }
 
 h3 {
-  text-align: right;
-  border-bottom: 1px solid #ccc;
   color: #666;
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
+  margin-top: 1rem;
   display: block;
 }
 
