--- a/src/components/GameBoard.css
+++ b/src/components/GameBoard.css
@@ -18,7 +18,6 @@
   }
   
 .damage-disc {
-    margin-top: 1rem;
     width: 40px;
     height: 40px;
     background-color: #ff4136;
@@ -54,4 +53,13 @@
     position: relative;
     transform: perspective(700px) rotateX(30deg);
     transform-style: preserve-3d;
+}
+
+.game-board-footer {
+    margin-top: 1rem;
+    flex-direction: row;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
 }
