--- a/src/components/BoardCell.css
+++ b/src/components/BoardCell.css
@@ -6,4 +6,23 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
+}
+
+.wall {
+    position: absolute;
+    background-color: rgb(140, 4, 4);
+    background-image: repeating-linear-gradient(135deg, rgba(0, 0, 0, .1), rgba(0, 0, 0, .1) 10px, rgba(0, 0, 0, .6) 10px, rgba(0, 0, 0, .6) 20px);
+}
+
+.wall.horizontal {
+    width: 100%;
+    height: 10px;
+    top: -10px;
+}
+
+.wall.vertical {
+    width: 10px;
+    height: 100%;
+    left: -10px;
 }
