Improve AI based on better heuristic

--- a/src/components/GameBoard.css
+++ b/src/components/GameBoard.css
@@ -6,7 +6,7 @@
 
 .grid {
     display: grid;
-    grid-template-columns: repeat(4, 100px);
+    grid-template-columns: repeat(var(--board-size, 4), 100px);
     grid-gap: .5rem;
     background-image: url('~/public/grunge-texture.png');
     background-blend-mode: difference;
