--- a/src/App.css
+++ b/src/App.css
@@ -61,3 +61,10 @@ h3 {
   padding: 1rem;
 }
 
+.game-over {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin: 0 auto;
+}
